--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+.gMenu {
+  display: none;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -23,10 +27,6 @@ header {
 .heading img {
   height: 50px;
   margin: 5px;
-}
-
-.hm-menu {
-  display: none;
 }
 
 nav {
@@ -77,6 +77,7 @@ nav >:first-child {
   padding:.75rem 1.5rem;
   text-align: right;
   margin: 400px auto 20px 80%;
+  white-space: nowrap;
 }
 
 .intro {
@@ -103,7 +104,8 @@ nav >:first-child {
   font-size: 12pt;
   text-align: center;
   color: #744731;
-  margin: 5px 0;
+  margin: 5px 10px;
+  padding: 0 20px;
 }
 h2 {
   font-size: 25pt;
@@ -114,6 +116,7 @@ h2 {
 
 #particulars  {
   width: 100%;
+  gap: 16px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -124,7 +127,7 @@ h3 {
   font-size: 22pt;
   text-align: center;
   color: #744731;
-  /* margin:0 auto; */
+  margin:0 20px; 
 }
 
 .pphoto {
@@ -261,16 +264,17 @@ h6 {
 .voice-co{
   width: 50%;
   height: 50px;
-  font-size: 12pt;
+  font-size: 18px;
   background-color: #ffcccc;
-  text-align: center;
-  /* padding: 10px; */
+  text-align: left;
+  gap: 16px;
   border-radius: 10px;
   margin: 10px 25% 0 25% ;
 
 }
 .personal {
   width: 50%;
+  font-size: 12px;
   text-align: end;
   margin: 0 25%;
 }
@@ -404,104 +408,95 @@ footer {
     }
 
   header {
-    width: 100%;
-    height: 60px;
+    position: relative;
+    z-index: 100;
+    /* width: 100%; */
+    /* height: 60px; */
     background-color: #7B4848;
   }
 
   .nav-list {
-    display: none;
+    display: none; 
   }
 
 /*ハンバーガーメニューここから */
-
-/*ハンバーガーメニューの設置位置 */
-.hm-menu{
+/* メニューを画面上部に固定表示しています */
+.gMenu {
+  position: fixed;
   display: block;
-  position: absolute;
-  top: 30px;
-  left: 680px;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+  height: 60px;
 }
-
-/* ハンバーガーメニューの非表示 */
-.hm-menu-checkbox{
-  display: none;
-}
-
-/* ハンバーガーアイコンの設置スペース */
-.hm-menu-label{
-  position: relative;
-  height: 30px;
-  width: 30px;
-  z-index: 100;
+/* メニューアイコンを画面右上に固定しています */
+.gMenu .menu-icon {
   cursor: pointer;
+  position: absolute;
+  right: 50px;
+  top: 12px;
+  padding-top: 20px;
+  height: 12px;
 }
-
-/* ハンバーガーアイコン */
-.hm-menu-label span,
-.hm-menu-label span:before,
-.hm-menu-label span:after{
+/* メニューアイコン（三本線）の真ん中の線です */
+.gMenu .menu-icon .navicon {
+  background: #ffc107; /* 色は自由に変更可能です */
+  display: block;
+  height: 2px; /* 太さ */
+  width: 31px; /* 長さ */
+  position: relative;
+  transition: background .4s ease-out; /* 形が変わる時のアニメーション */
+}
+/* メニューアイコン（三本線）の上と下の線を疑似要素で追加 */
+.gMenu .menu-icon .navicon::before,
+.gMenu .menu-icon .navicon::after {
+  background: #ffc107; /* 色は自由に変更可能です */
   content: '';
   display: block;
-  height: 4px;
-  width: 30px;
-  border-radius: 3px;
-  background: #fff;
-  transition: 0.5s;
+  height: 100%;
   position: absolute;
+  transition: all .4s ease-out; /* 形が変わる時のアニメーション */
+  width: 100%;
 }
+.gMenu .menu-icon .navicon::before {top: 10px;} /* 位置を上にずらしています */
+.gMenu .menu-icon .navicon::after {top: -10px;} /* 位置を下にずらしています */
+/* 表示されるメニューです */
+.gMenu .menu {
+  background-color: rgba(255,255,255,0.9);
+  overflow: hidden;
+  max-height: 0; /* ★最初は高さを0にして非表示状態に */
+  transition: max-height .6s; /* 表示されるときのアニメーション */
+  text-align: center;
+}
+/* メニュー部分のデザインです */
+.gMenu .menu li:first-of-type {
+  padding-top: 50px;
+}
+.gMenu .menu li a {
+  display: block;
+  padding: 8px 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.gMenu .menu li a:hover {
+  background-color: #f4f4f4;
+}
+/* チェックボックスは常に非表示です */
+.gMenu .menu-btn {
+  display: none;
+}
+/* ▼▼▼以下はチェックボックスがONの時の状態です▼▼▼ */
+.gMenu .menu-btn:checked ~ .menu {
+  max-height: 338px; /* ★チェックボックスがオンの時高さを338pxにして表示させます */
+  transition: max-height .6s;
+}
+/* メニューボタンの中央の線を非表示に */
+.gMenu .menu-btn:checked ~ .menu-icon .navicon {background: transparent;}
 
-/* 三本線の一番上の棒の位置調整 */
-.hm-menu-label span:before {
-  bottom: 15px;
-}
-
-/* 三本線の一番下の棒の位置調整 */
-.hm-menu-label span:after {
-  top: 15px;
-}
-
-/* アイコンがクリックされたら真ん中の線を透明にする */
-#hm-menu-switch:checked ~ .hm-menu-label span {
-  background: rgba(255, 255, 255, 0);
-}
-
-/* アイコンがクリックされたらアイコンが×印になように上下の線を回転 */
-#hm-menu-switch:checked ~ .hm-menu-label span::before {
-  bottom: 0;
-  transform: rotate(45deg);
-}
-#hm-menu-switch:checked ~ .hm-menu-label span::after {
-  top: 0;
-  transform: rotate(-45deg);
-}
-
-/* メニューのデザイン*/
-.hm-menu-contents {
-  width: 50%;
-  height: 55%;
-  position: fixed;
-  top: 0;
-  right: 100%; /* メニューを画面の外に飛ばす */
-  z-index: 99;
-  background: #f6dfdf;
-  transition: .5s;
-  padding: 30px;
-}
-.hm-menu-list{
-  list-style: none;
-}
-.hm-menu-item{
-  font-size: 20px;
-  color: #534741;
-  font-weight: 5%;
-  margin-bottom: 20px;
-}
-
-/* アイコンがクリックされたらメニューを表示 */
-#hm-menu-switch:checked ~ .hm-menu-contents {
-  right: 0;  /* メニューを画面に入れる */
-}
+/* メニューボタンの上下の線を45度傾けて✕印を作ります */
+.gMenu .menu-btn:checked ~ .menu-icon .navicon::before {transform: rotate(-45deg);top: 0;}
+.gMenu .menu-btn:checked ~ .menu-icon .navicon::after {transform: rotate(45deg);top: 0;}
 
 /* ハンバーガーメニューここまで */
 
@@ -511,21 +506,25 @@ footer {
   }
 
   .main-visual {
+    position: relative;
     width: 100%;
-    /* height: 500px; */
+    height: 250px;
     background-image: url(img/main-s.png);
     background-size: cover;
     background-position: center;
+    margin-top: 10px;
    }
 
   .main-btn {
-    display: inline-block;
-    font-size: 1.5rem;
+    position: relative;
+    bottom: 200px;
+    right: 40px; 
+    font-size: 1rem;
     background-color: #F88B6F;
     color: #fff;
-    border-radius: 8px;
-    padding:.75rem 1.5rem;
-    margin: 430px auto 20px 55%;
+    text-align: center;
+    border-radius: 8px; 
+    padding: 0.5em 1rem; 
    }
 
   .intro {
@@ -536,7 +535,7 @@ footer {
     /* flex-wrap: wrap; */
   }
   .petit {
-    width: 500px;
+    width: 100%;
     /* height: 300px; */
     text-align: center;
     /* margin: 50px 50px 0px; */
@@ -544,23 +543,23 @@ footer {
   }
   .hhb {
     width: 100%;
-    font-size: 10pt;
+    font-size: 13px;
     text-align: center;
     color: #744731;
     margin: 10px 0px 5px 0px;
   }
   h2 {
     width: 100%;
-    font-size: 20pt;
+    font-size: 20px;
     text-align: center;
     color: #744731;
     margin: 10px 0px ;
   }
   .intro-text {
-    width: 70%;
+    width: 100%;
     text-align: center;
     font-size: 11pt;
-    margin: 10pt 15%;
+    margin: 10px 15px;
   }
 
   #particulars  {
@@ -569,34 +568,34 @@ footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px; 
   }
   h3 {
     width: 100%;
-    font-size: 16pt;
+    font-size: 15px;
     text-align: center;
     color: #744731;
-    margin:30px 0px;
+    margin:10px 0px;
   }
   .pphoto {
     width: 50%;
     /* height: 50%; */
     text-align: center;
-    margin: 10px 25% ;
+    margin:20px 0 0 0; 
   }
   h4 {
     width: 100%;
-    font-size: 14pt;
+    font-size: 13px;
     text-align: center;
-    margin: 10px 0;
+    margin: 5px 0;
   }
 
   .particulars_p {
-    width: 100%;
-    font-size: 11pt;
+    width: auto;
+    font-size: 12px;
     text-align: center;
-    padding: 5px 0;
-    margin: 10px 0 30px;
+    padding: 0;
+    margin: 0 0 30px 0;
   }
 
   #chef {
@@ -608,8 +607,9 @@ footer {
     /* flex-wrap: wrap; */
   }
   .chef-photo {
-    width: 350px;
-    height: 420px;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
     text-align: center;
     /* margin: 30px 125px;  */
   }
@@ -626,18 +626,18 @@ footer {
   }
 
   #charm {
-    width: 600px;
-    text-align: center;
-    margin: 100px 83px;
+    width: 100%;
+    /* text-align: center; */
+    margin: 0 auto;
   }
   .charm-grid {
-    width: 300px;
+    width: 100%;
     display: grid;
     gap: 30px 0px;
     grid-template-columns: repeat(1,200px);
     text-align: center;
     justify-content: center;
-    margin: 0 150px;
+    margin: auto;
   }
   .charm-photo {
     width: 200px;
@@ -698,40 +698,44 @@ footer {
     /* margin: 10px 100px 10px 100px; */
   }
   .scene-photo {
-    width: 400px;
+    width: 100%;
     text-align: center;
     margin: 10px 0;
   }
   .scene-word {
     width: 100%;
-    font-size: 11pt;
+    font-size: 14px;
     text-align: center;
     margin: 10px 0 40px 0;
   }
 
   .voice {
-    width: 80%;
+    width: 100%;
+    height: auto;
+    font-size: 10px;
     list-style: none;
     text-align: center;
-    margin: 0 10% 60px;
-    padding: 0 0 20px;
+    gap: 20px;
+    margin: 0 30px;
+    padding: 10px;
 
   }
   .voice-co {
     width: 80%;
-    height: 50px;
-    font-size: 10pt;
+    height: auto;
+    font-size: 10px;
     background-color: #ffcccc;
-    text-align: center;
-    padding: 9px;
-    border-radius: 10px;
-    margin: 0 10%;
+    text-align: left;
+    /* padding: 9px; */
+    border-radius: 0;
+    margin: 0 ;
   }
 
   .personal {
     width: 80%;
+    font-size: 9px;
     text-align: end;
-    margin: 0 10% 10px;
+    margin: 0;
   }
 
   .price {
@@ -830,21 +834,20 @@ footer {
   .shop {
     text-align: center;
     padding-top: 10px;
-    font-size: 16pt;
+    font-size: 16px;
     color: #fff;
   }
   .add {
     text-align: center;
     padding-top: 5px;
-    font-size: 12pt;
+    font-size: 11px;
     color: #fff;
   }
   .url {
     text-align: center;
-    font-size: 10pt;
+    font-size: 9px;
     margin: 5px auto 10px;
     color: #fff;
   }
 
-  }
-
+}
